--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="container">
-    <h1>API Pexels </h1>
+    <h1>API Pexels test  </h1>
 
     <input type="text" id="inputText" placeholder="Insert text...">
 
